finishing coding my HTML email template

--- a/index.html
+++ b/index.html
@@ -102,6 +102,20 @@
 			font-size: 15px;
 			line-height: 20px;
 		}
+
+		.two-columns .last {
+			padding: 35px 0;
+		}
+
+		.two-columns .padding {
+			padding: 20px;
+		}
+
+		.two-columns .content {
+			text-align: left;
+			font-size: 15px;
+			line-height: 20px;
+		}
 	</style>
 </head>
 
@@ -272,9 +286,78 @@
 			</tr>
 
 			<!-- TWO COLUMN SECTION -->
+			<tr>
+				<td>
+
+					<table width="100%">
+						<tr>
+							<td class="two-columns last">
+
+								<table class="column">
+									<tr>
+										<td class="padding">
+
+											<table class="content">
+												<tr>
+													<td>
+														<a href="#"><img src="./img/palette.png" alt="" width="260"></a>
+													</td>
+												</tr>
+											</table>
+
+										</td>
+									</tr>
+								</table>
+
+								<table class="column">
+									<tr>
+										<td class="padding">
+
+											<table class="content">
+												<tr>
+													<td>
+														<h4>Create Custom Designs</h4>
+														<p style="padding-bottom: 15px
+														;">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+															Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+														</p>
+														<a href="#" class="button">HTML Email Course</a>
+													</td>
+												</tr>
+											</table>
+
+										</td>
+									</tr>
+
+								</table>
+							</td>
+						</tr>
+
+					</table>
+				</td>
+			</tr>
 
 			<!-- FOOTER -->
-
+			<tr>
+				<td style="background-color: #2b2e33; color:#fff;">
+					<table width="100%">
+						<tr>
+							<td style="padding: 45px 20px;">
+								<a href="#"><img src="./img/logo.png" alt="" width="260"></a>
+								<p style="padding: 5px 0 3px;">SailChimp HTML Email Template</p>
+								<p style="padding: 5px;">123 Stree Road, City, State 55555</p>
+								<a href="#"><img src="./img/facebook.png" alt="logo" class="social"></a>
+								<a href="#"><img src="./img/twitter.png" alt="logo" class="social"></a>
+								<a href="#"><img src="./img/youtube.png" alt="logo" class="social"></a>
+								<a href="#"><img src="./img/instagram.png" alt="logo" class="social"></a>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr>
+				<td height="8" style="background-color: #000;"></td>
+			</tr>
 
 		</table>
 
